--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 dependencies {
     testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.7")
+
 }
 bootRun.environment([
         "WELCOME_MESSAGE": "Hello from the review environment",
