--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 applications:
   - name: pal-tracker
     path: build/libs/pal-tracker.jar
-    random-route: true
+    routes:
+      - route: pal-tracker-pietro-sampsonite.apps.chicken.pal.pivotal.io
     env:
-      WELCOME_MESSAGE: Hello World
+      WELCOME_MESSAGE: Hello from the review environment
