second task committed

--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,6 @@ buildscript {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
     }
 }
-
-
 plugins {
     id "java"
 }
@@ -24,5 +22,13 @@ repositories {
 }
 
 dependencies {
+    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
 }
+bootRun.environment([
+        "WELCOME_MESSAGE": "hello",
+])
+
+test.environment([
+        "WELCOME_MESSAGE": "Hello from test",
+])
